--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,8 +1,35 @@
 {
     "name": "@nild/i18n",
     "private": false,
+    "version": "0.0.0",
+    "type": "module",
+    "module": "./dist/index.js",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js"
+        }
+    },
+    "homepage": "https://nil-design.github.io/nil-design/zh-CN/i18n",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nil-design/nil-design.git"
+    },
+    "bugs": {
+        "url": "https://github.com/nil-design/nil-design/issues"
+    },
+    "files": [
+        "dist",
+        "package.json",
+        "LICENSE",
+        "NOTICE"
+    ],
+    "scripts": {
+        "build": "vite build --mode PROD",
+        "dev": "vite build --mode DEV --watch"
+    },
     "peerDependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "@nild/shared": "workspace:*",
+        "react": "^18.2.0"
     }
 }
