docs: refactor the navigation of changelogs to dropdown

--- a/docs/zh-CN/changelog/i18n.md
+++ b/docs/zh-CN/changelog/i18n.md
@@ -3,6 +3,7 @@ title: '@nild/i18n'
 cat: 国际化
 catOrder: 5
 editLink: false
+lastUpdated: false
 ---
 
 <!--@include: ../../../packages/i18n/CHANGELOG.md-->
